--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <a class="nav-link" href="#"><i class='fa fa-bell'></i>Support</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq</a>
+       <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq <i class="fa fa-caret-down"></i></a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="#"><i class='fa fa-user'></i>Jessica Jones</a>
