--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
        <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq <i class="fa fa-caret-down"></i></a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#"><i class='fa fa-user'></i>Jessica Jones</a>
+       <a class="nav-link" href="#" id="user"><i class='fa fa-user'></i>Jessica Jones<i class="fa fa-caret-down"></i></a>
      </li>
    </ul>
   </div> <!-- end of col-sm-6 -->
 </div> <!-- end of row -->
 </div><!-- end of container-fluid -->
+
 <div class="jumbotron jumbotron-fluid">
   <div class="container white-overlay">
     <h3 class='heading'>Welcome to Your Advance Healthcare Planning</h3>
@@ -59,10 +60,12 @@
     <h5 class='heading'>Welcome to Your Advance Healthcare Planning</h5>
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RVfiOgu23ks" allowfullscreen></iframe>
 </div><!-- end of col-sm-5 embed-responsive -->
+<div class="col-sm-9 p-div">
 <p>This process will help you share your healthcare needs and wishes with loved ones and healthcare providers, by keeping all your preferences documented in one place.</p>
 <p>A summary can be downloaded to your computer and sent to your healthcare providers and decision makers.
 We have provided links to explain some phrases and terminology, and you will be able to reach out to us along the way with any questions.</p>
 <p>Take your time and take care!</p>
+</div>
 <button type="button" class="btn btn-default btn-block">Let's Begin</button>
 </div><!-- end of row -->
   </div><!-- end of container white-overlay -->
