initial replay of first checkout

--- a/document1.html
+++ b/document1.html
@@ -26,7 +26,7 @@
   <div class='col-sm-7 nav-col'>
     <ul class="nav">
      <li class="nav-item">
-       <a class="nav-link" href="#">Home</a>
+       <a class="nav-link" href="index.html">Home</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="#">My Documents</a>
@@ -95,7 +95,7 @@
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
-           <img src="img/MAINenglish.00_02_17_21.Still015.jpg" class="your-voice-img" alt="">
+           <img src="img/main_documents.jpg" class="your-voice-img" alt="">
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
