--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <a class="nav-link" href="#">Home</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#">My Documents</a>
+       <a class="nav-link" href="document1.html">My Documents</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="#">My Shared Circle</a>
