changes on my documents again

--- a/document1.html
+++ b/document1.html
@@ -84,8 +84,8 @@
     </div> <!-- end of row -->
     </div><!-- end of container-fluid -->
 
-    <div class="container-fluid header-container">
-     <div class="row no-gutters">
+    <div class="container header-container">
+     <div class="row" style="background-color:#a71931">
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">1 of 5</h5>
