--- a/document1.html
+++ b/document1.html
@@ -151,37 +151,31 @@
    <div class="form-group">
       <label for="firstname">First Name</label>
 	  <input type="text" class="form-control">
-   </div>
-   <div class="form-group">
       <label for="middlename">Middle Name</label>
 	  <input type="text" class="form-control">
  </div>
- <div class="form-group full-input">
+ <div class="form-group">
     <label for="lastname">Last Name</label>
-  <input type="text" class="form-control" id= "lastname">
+  <input type="text" class="form-control" style="width:80%">
 </div>
 <div class="form-group full-input">
    <label for="address">Address</label>
- <input type="text" class="form-control" id="address">
+ <input type="text" class="form-control"style="width:80%">
 </div>
 <div class="form-group city-row">
    <label for="name">City</label>
  <input type="text" class="form-control" id="name">
-   <label for="state"class="state">State</label>
-   <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"></button>
+   <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">State</button>
    <div class="dropdown-menu">
      <a class="dropdown-item" href="AL">AL</a>
      <a class="dropdown-item" href="AK">AK</a>
      <a class="dropdown-item" href="AZ">AZ</a>
    </div>
-   <label for="zip" class="zip">Zip</label>
- <input type="text" class="form-control" id="name" placeholder="" style="width:95px">
+ <input type="text" class="form-control" id="name" placeholder="Zip" style="width:100px;">
 </div>
 <div class="form-group">
    <label for="cellphone">Cell Phone</label>
  <input type="text" class="form-control" id="name" placeholder="">
-</div>
-<div class="form-group">
    <label for="alternatephone">Alternate</label>
  <input type="text" class="form-control" id="middlename" placeholder="">
 </div>
