--- a/document1.html
+++ b/document1.html
@@ -156,16 +156,15 @@
  </div>
  <div class="form-group">
     <label for="lastname">Last Name</label>
-  <input type="text" class="form-control" style="width:80%">
-</div>
-<div class="form-group full-input">
+  <input type="text" class="form-control">
    <label for="address">Address</label>
- <input type="text" class="form-control"style="width:80%">
+ <input type="text" class="form-control">
 </div>
 <div class="form-group city-row">
    <label for="name">City</label>
  <input type="text" class="form-control" id="name">
-   <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">State</button>
+ <label for="name">State</label>
+   <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"></button>
    <div class="dropdown-menu">
      <a class="dropdown-item" href="AL">AL</a>
      <a class="dropdown-item" href="AK">AK</a>
