--- a/document1.html
+++ b/document1.html
@@ -29,7 +29,7 @@
        <a class="nav-link" href="index.html">Home</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#">My Documents</a>
+       <a class="nav-link" href="doument1.html">My Documents</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="#">My Shared Circle</a>
@@ -436,8 +436,8 @@
      <p>List their names here so that your healthcare decision maker(s) will now whom to involve. Remember that only your healthcare decision maker(s) will be able to make final decisons.
      However, they can rely on information from others who are close to you to help in the decision-making process.</p>
      <form class="form-inline">
-       <div class="form-group full-input-2">
-       <label for="additionalnames">Please seperate additional names by commas.</label>
+       <div class="form-group">
+       <label for="additionalnames" style="height:20vh">Please seperate additional names by commas.</label>
        <input type="text" class="form-control" id="additionalnames">
        </div>
   </form>
@@ -455,15 +455,11 @@
      <strong class="fa-stack-1x">4</strong>
  </span>
    <h7 class='orange-heading'>When do you want your healthcare decision maker(s) to be able to act on your behalf?</h7>
-     <p class="checkbox-text">
-<input class="form-check-input" type="checkbox" id="checkbox1" value="option1">
-When my primary or attending physician and one other licensed member of my medical team determine that I do not have the capacity to appreciate the risks and
+   <p><span><input type="checkbox" value=""><span class="checkbox-text">When my primary or attending physician and one other licensed member of my medical team determine that I do not have the capacity to appreciate the risks and
  benefits of medical treatement. I understand that if my capacity returns, I will make my own medical decisions.
 </p>
 <p class="checkbox-text" style="font-weight:900">-OR-</p>
-<p class="checkbox-text">
-<input class="form-check-input" type="checkbox" id="checkbox2" value="">
-My healthcare decision maker's authority is effective immediately, even though I have the capacity at this time.
+  <p><span><input type="checkbox" value=""><span class="checkbox-text">My healthcare decision maker's authority is effective immediately, even though I have the capacity at this time.
 </p>
 </div> <!-- end of section 4 -->
 
@@ -481,9 +477,7 @@ My healthcare decision maker's authority is effective immediately, even though I
    <h7 class='orange-heading'> Are there limitations on the healthcare decision maker(s) can make for you?</h7>
     <div class="row">
       <div class="col-sm-12">
-     <p class="checkbox-text">
-<input class="form-check-input" type="checkbox" id="checkbox3" value="">
-No limitations. I want my healthcare decision maker to be able to make decisions about everything, including:
+ <p><span><input type="checkbox" value=""><span class="checkbox-text">No limitations. I want my healthcare decision maker to be able to make decisions about everything, including:
 </p>
 </div><!-- end of col-sm-12 -->
 </div> <!-- end of nested row -->
@@ -506,14 +500,12 @@ No limitations. I want my healthcare decision maker to be able to make decisions
 </div> <!-- end of nested row -->
 <div class="row">
   <div class="col-sm-12">
-    <p class="checkbox-text">
-<input class="form-check-input" type="checkbox" id="checkbox4" value="">
- Specific limitations:
- </p>
+    <p><span><input type="checkbox" value=""><span class="checkbox-text"> Specific limiations:</p>
+
     <form class="form-inline">
-      <div class="form-group full-input-2">
-      <label for="limitationslist">Please list any specific limiations here:</label>
-      <input type="text" class="form-control" id="listhere">
+      <div class="form-group">
+      <label for="limitationslist" style="height:20vh">Please list any specific limiations here:</label>
+      <input type="text" class="form-control" id="limitationslist">
       </div>
  </form>
     </div> <!-- end of col-sm-12 -->
@@ -532,10 +524,10 @@ No limitations. I want my healthcare decision maker to be able to make decisions
 <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after your death?</h7>
 <div class="row">
   <div class="col-sm-2">
- <p><span><input type="checkbox" value=""><span> Yes</p>
+ <p><span><input type="checkbox" value=""><span class="checkbox-text"> Yes</p>
  </div><!-- end of col-sm-2-->
 <div class="col-sm-2">
- <p><span><input type="checkbox" value=""><span> No</p>
+ <p><span><input type="checkbox" value=""><span class="checkbox-text"> No</p>
 </div><!-- end of col-sm-2 -->
 <div class="col-sm-8"></div>
 </div> <!-- end of nested row-->
