adding initial commit for yourvalues.html

--- a/mydocuments.html
+++ b/mydocuments.html
@@ -29,7 +29,7 @@
        <a class="nav-link" href="index.html">Home</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="mydocuments.html">My Documents</a>
+       <a class="nav-link active" href="mydocuments.html">My Documents</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="#">My Shared Circle</a>
@@ -65,10 +65,10 @@
       <div class='col-sm-12'>
         <ul class="sub-nav">
          <li class="nav-item">
-           <a class="nav-link" href="#" style="color:#a71931">Your Voice <span class="slash"> /</span></a>
+           <a class="nav-link active" href="#">Your Voice <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Values <span class="slash"> /</span></a>
+           <a class="nav-link" href="yourvalues.html">Your Values <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="#">Your Plan 1 <span class="slash"> /</span></a>
@@ -595,7 +595,7 @@
              </div><!-- end of col-sm-4 -->
             </div> <!-- end of row -->
 
-            <button type="button" class="btn btn-default btn-block">Next</button>
+            <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
             </div><!-- end of main container on page -->
 
     <!-- Optional JavaScript -->
