--- a/yourvalues.html
+++ b/yourvalues.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -17,7 +17,7 @@
   <div class='container-fluid' id="logo-container">
   <div class='row'>
   <div class='col-sm-12'>
-  <img src='img/logo.png' class="img-fluid">
+  <img src='img/logo.png' class="img-fluid" alt="">
 </div><!-- end of col-sm-12-->
 </div> <!-- end of row -->
 </div><!-- end of container-fluid -->
@@ -26,7 +26,7 @@
   <div class='col-sm-7 nav-col'>
     <ul class="nav">
      <li class="nav-item">
-       <a class="nav-link active" href="#">Home</a>
+       <a class="nav-link" href="index.html">Home</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="mydocuments.html">My Documents</a>
@@ -42,34 +42,64 @@
        <a class="nav-link" href="#"><i class='fa fa-bell'></i>Support</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq <i class="fa fa-caret-down"></i></a>
+       <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="#" id="user"><i class='fa fa-user'></i>Jessica Jones<i class="fa fa-caret-down"></i></a>
+       <a class="nav-link" href="#"><i class='fa fa-user'></i>Jessica Jones</a>
      </li>
    </ul>
   </div> <!-- end of col-sm-6 -->
 </div> <!-- end of row -->
 </div><!-- end of container-fluid -->
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container white-overlay">
-    <h3 class='heading'>Welcome to Your Advance Healthcare Planning</h3>
-    <div class="row justify-content-center">
-      <div class='col-sm-8 embed-responsive embed-responsive-16by9'>
-    <h5 class='heading'>Welcome to Your Advance Healthcare Planning</h5>
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RVfiOgu23ks" allowfullscreen></iframe>
-</div><!-- end of col-sm-5 embed-responsive -->
-<div class="col-sm-9 p-div">
-<p>This process will help you share your healthcare needs and wishes with loved ones and healthcare providers, by keeping all your preferences documented in one place.</p>
-<p>A summary can be downloaded to your computer and sent to your healthcare providers and decision makers.
-We have provided links to explain some phrases and terminology, and you will be able to reach out to us along the way with any questions.</p>
-<p>Take your time and take care!</p>
-</div>
-<button type="button" class="btn btn-default btn-block">Let's Begin</button>
-</div><!-- end of row -->
-  </div><!-- end of container white-overlay -->
-</div><!-- end of jumbotron -->
+  <div class="container-fluid">
+   <div class="row">
+   <div class="col-sm-12">
+     <h3 class=" heading text-center">Your Voice, Your Values, Your Plan - for  Your Healthcare</h3>
+  </div> <!-- end of col-sm-12 -->
+    </div> <!-- end of row -->
+    </div><!-- end of container-fluid -->
+
+    <div class="container sub-nav-container">
+    <div class='row'>
+      <div class='col-sm-12'>
+        <ul class="sub-nav">
+         <li class="nav-item">
+           <a class="nav-link" href="#">Your Voice <span class="slash"> /</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link active" href="#">Your Values <span class="slash"> /</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Your Plan 1 <span class="slash"> /</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Your Plan 2 <span class="slash"> /</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Your Plan 3 <span class="slash-none"> /</span></a>
+         </li>
+       </ul>
+       </div><!-- end of col-sm-12-->
+    </div> <!-- end of row -->
+    </div><!-- end of container-fluid -->
+
+    <div class="container header-container">
+     <div class="row no-gutters">
+       <div class="col-sm-6 header-text">
+         <div class = "center-block">
+         <h5 class="text-left">2 of 5</h5>
+         <p class="text-left">What does quality of life mean to you? This is a very personal question. Think about the <span class="hilite">choices you would like to make</span> and how they will<br>
+  <span class="underline">impact you and your loved ones.</span></p>
+  </div><!-- end of center block -->
+         </div> <!-- end of col-sm-6 -->
+         <div class="col-sm-6">
+           <img src="img/main_documents.jpg" class="your-voice-img" alt="">
+         </div> <!-- end of col-sm-6 -->
+           </div> <!-- end of row -->
+      </div> <!-- end of container -->
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
