--- a/mydocuments.html
+++ b/mydocuments.html
@@ -65,7 +65,7 @@
       <div class='col-sm-12'>
         <ul class="sub-nav">
          <li class="nav-item">
-           <a class="nav-link active" href="#">Your Voice <span class="slash"> /</span></a>
+           <a class="nav-link active" href="mydocuments.html">Your Voice <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link" href="yourvalues.html">Your Values <span class="slash"> /</span></a>
@@ -95,7 +95,7 @@
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
-           <img src="img/main_documents.jpg" class="your-voice-img" alt="">
+           <img src="img/main_documents.jpg" class="your-img" alt="">
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
@@ -103,7 +103,7 @@
       <div class="container best-person">
         <div class="row">
           <div class="col-sm1-12">
-            <h5 class="text-left" style= "font-weight:900">Best Person</h5>
+            <h5 class="text-left best-heading">Best Person</h5>
               <p class="best-person-text text-left">What does "best person" mean? It means that you should select the person or people who will support the choices you make throughout this document.</p>
               <ul class="best-person-text text-left">
               <li class="best-person-text">For some people, that person os a family member. Others may think family members are too emotionally involved, so they would rather choose a friend or other loved one.</li>
