--- a/yourvalues.html
+++ b/yourvalues.html
@@ -65,7 +65,7 @@
       <div class='col-sm-12'>
         <ul class="sub-nav">
          <li class="nav-item">
-           <a class="nav-link" href="#">Your Voice <span class="slash"> /</span></a>
+           <a class="nav-link" href="mydocuments.html">Your Voice <span class="slash"> /</span></a>
          </li>
          <li class="nav-item">
            <a class="nav-link active" href="#">Your Values <span class="slash"> /</span></a>
@@ -85,7 +85,7 @@
     </div><!-- end of container-fluid -->
 
     <div class="container header-container">
-     <div class="row no-gutters">
+     <div class="row" style="background-color:#a71931">
        <div class="col-sm-6 header-text">
          <div class = "center-block">
          <h5 class="text-left">2 of 5</h5>
@@ -94,11 +94,95 @@
   </div><!-- end of center block -->
          </div> <!-- end of col-sm-6 -->
          <div class="col-sm-6">
-           <img src="img/main_documents.jpg" class="your-voice-img" alt="">
+           <img src="img/yourvalues.jpg" class="your-img" alt="">
          </div> <!-- end of col-sm-6 -->
            </div> <!-- end of row -->
       </div> <!-- end of container -->
 
+      <div class="container best-person">
+        <div class="row">
+          <div class="col-sm1-12">
+           <h5 class="best-heading">Choices you would like to make</h5>
+           <p>All medical treatment can come with potential benefits (desired outcomes) and potential burdens (unwanted outcomes). Only you can decide
+           what treatment is right for you, based on your goals, personal values, and current health condition.</p>
+         </div> <!-- end of col-sm-12 -->
+         </div> <!-- end of row -->
+        </div> <!-- end of container -->
+
+        <div class="container my-voice">
+        <div class="row">
+      <div class="col-sm-12">
+         <h5 class="heading2 text-left">MY VOICE</h5>
+        </div><!-- end of col-sm-12 -->
+         </div> <!-- end of row -->
+          </div> <!-- end of container -->
+
+
+          <!-- Main form container -->
+                <div class="container form-container">
+                  <div class="row">
+                    <!-- start of main col-sm-9 -->
+                  <div class="col-sm-9">
+                 <!-- start of nested row -->
+                 <div class="row" id="nested-form-row">
+
+                   <!-- First section -->
+                   <div class="col-sm-12 col-form">
+                     <span class="fa-stack">
+                       <!-- The icon that will wrap the number -->
+                         <span class="fa fa-circle fa-stack-2x"></span>
+                       <!-- a strong element with the custom content, in this case a number -->
+                       <strong class="fa-stack-1x"> 1 </strong>
+                   </span>
+                     <h7 class='orange-heading'> When you think about medical care that matters most to you, what is most important to you? <br>(Click on the button to slide left or right.)</h7>
+                     <div class="row">
+                       <div class="col-sm-12">
+                     <form class="range-field my-4 w-100">
+                        <input type="range" min="0" max="100" />
+                    </form>
+                    </div><!-- end of col-sm-12 -->
+                    </div><!-- end of nested row -->
+                    <div class="row">
+                    <div class="col-sm-3">
+                    <p>Prioritize sustaining life, even at the expense of some comfort</p>
+                    </div><!-- end of col-sm-3 -->
+                    <div class="col-sm-6"></div>
+                    <div class="col-sm-3">
+                    <p>Prioritize comfort, even at the expense of sustaining life</p>
+                    </div><!-- end of col-sm-3 -->
+                    </div><!-- end of nested row -->
+
+                    </div> <!-- end of nested col-sm-12-form -->
+
+
+
+          </div> <!-- end of nested form-row -->
+        </div> <!-- end of col-sm-9-->
+
+        <!-- -----------------------------------------
+              Side bar
+        ------------------------------------------ -->
+
+           <div class="col-sm-3">
+                      <div class="row nested-row-col-3">
+                        <div class="col-sm-12 note">
+                          <div class="row">
+                            <div class="col-sm-12 mind-heading">
+                           <h5 class="sub-reminder">CAN I CHANGE MY MIND?</h5>
+                           </div><!-- end of col-sm-12 -->
+                           </div><!-- end of row-->
+                           <div class="row">
+                           <div class="col-sm-12 mind-text">
+                           <p>You can change any of the information on this form at any time, simply by logging in and making changes at your convenience.</p>
+                             </div><!-- end of col-sm-12 -->
+                             </div><!-- end of row -->
+                          </div><!-- end of col-sm-12-->
+                        </div> <!-- end of 2nd nested row -->
+                   </div><!-- end of col-sm-4 -->
+                  </div> <!-- end of row -->
+
+                  <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
+                  </div><!-- end of main container on page -->
 
 
     <!-- Optional JavaScript -->
