adding more sections

--- a/yourvalues.html
+++ b/yourvalues.html
@@ -138,7 +138,7 @@
                      <div class="row">
                        <div class="col-sm-12">
                      <form class="range-field my-4 w-100">
-                        <input type="range" min="0" max="100" />
+                        <input type="range" min="0" max="100" value = ""/>
                     </form>
                     </div><!-- end of col-sm-12 -->
                     </div><!-- end of nested row -->
@@ -151,8 +151,56 @@
                     <p>Prioritize comfort, even at the expense of sustaining life</p>
                     </div><!-- end of col-sm-3 -->
                     </div><!-- end of nested row -->
-
                     </div> <!-- end of nested col-sm-12-form -->
+
+                    <!-- 2nd section -->
+                    <div class="col-sm-12 col-form" id="section-6">
+                      <span class="fa-stack">
+                        <!-- The icon that will wrap the number -->
+                          <span class="fa fa-circle fa-stack-2x"></span>
+                        <!-- a strong element with the custom content, in this case a number -->
+                        <strong class="fa-stack-1x">2</strong>
+                    </span>
+                 <h7 class='orange-heading'>If you choose an in-between point in Question 1 above, what does that look like for you?</h7>
+                    <div class="row">
+                     <div class="col-sm-12">
+                         <input type="text" class="form-control para-answer">
+                       </div><!-- end of col-sm-12 -->
+                      </div><!-- end of nested row -->
+                    </div> <!-- end of section2-->
+
+                    <!-- 3rd section -->
+                    <div class="col-sm-12 col-form" id="section-6">
+                      <span class="fa-stack">
+                        <!-- The icon that will wrap the number -->
+                          <span class="fa fa-circle fa-stack-2x"></span>
+                        <!-- a strong element with the custom content, in this case a number -->
+                        <strong class="fa-stack-1x">3</strong>
+                    </span>
+                 <h7 class='orange-heading'>What other information or instructions do you want to share with your medical team?</h7>
+                    <div class="row">
+                     <div class="col-sm-12">
+                         <input type="text" class="form-control para-answer">
+                       </div><!-- end of col-sm-12 -->
+                      </div><!-- end of nested row -->
+                    </div> <!-- end of section 3-->
+
+                    <!-- 4th section -->
+                    <div class="col-sm-12 col-form" id="section-6">
+                      <span class="fa-stack">
+                        <!-- The icon that will wrap the number -->
+                          <span class="fa fa-circle fa-stack-2x"></span>
+                        <!-- a strong element with the custom content, in this case a number -->
+                        <strong class="fa-stack-1x">4</strong>
+                    </span>
+                 <h7 class='orange-heading'>What matters to you about pain and symptom control?</h7>
+                    <div class="row">
+                     <div class="col-sm-12">
+                         <input type="text" class="form-control para-answer">
+                       </div><!-- end of col-sm-12 -->
+                      </div><!-- end of nested row -->
+                    </div> <!-- end of section 4-->
+
 
 
 
