--- a/yourvalues.html
+++ b/yourvalues.html
@@ -154,7 +154,7 @@
                     </div> <!-- end of nested col-sm-12-form -->
 
                     <!-- 2nd section -->
-                    <div class="col-sm-12 col-form" id="section-6">
+                    <div class="col-sm-12 col-form">
                       <span class="fa-stack">
                         <!-- The icon that will wrap the number -->
                           <span class="fa fa-circle fa-stack-2x"></span>
@@ -170,7 +170,7 @@
                     </div> <!-- end of section2-->
 
                     <!-- 3rd section -->
-                    <div class="col-sm-12 col-form" id="section-6">
+                    <div class="col-sm-12 col-form">
                       <span class="fa-stack">
                         <!-- The icon that will wrap the number -->
                           <span class="fa fa-circle fa-stack-2x"></span>
@@ -186,7 +186,7 @@
                     </div> <!-- end of section 3-->
 
                     <!-- 4th section -->
-                    <div class="col-sm-12 col-form" id="section-6">
+                    <div class="col-sm-12 col-form">
                       <span class="fa-stack">
                         <!-- The icon that will wrap the number -->
                           <span class="fa fa-circle fa-stack-2x"></span>
@@ -201,8 +201,64 @@
                       </div><!-- end of nested row -->
                     </div> <!-- end of section 4-->
 
+                    <!-- 5th section -->
+                    <div class="col-sm-12 col-form">
+                      <span class="fa-stack">
+                        <!-- The icon that will wrap the number -->
+                          <span class="fa fa-circle fa-stack-2x"></span>
+                        <!-- a strong element with the custom content, in this case a number -->
+                        <strong class="fa-stack-1x">5</strong>
+                    </span>
+                    <h7 class='orange-heading'>Do you have faith or spiritual practices that you want your medical team to know about?</h7>
+                    <div class="row">
+                        <div class="col-sm-2">
+                       <p><span><input type="checkbox" value=""><span class="checkbox-text"> Yes</p>
+                       </div><!-- end of col-sm-2-->
+                      <div class="col-sm-2">
+                       <p><span><input type="checkbox" value=""><span class="checkbox-text"> No</p>
+                      </div><!-- end of col-sm-2 -->
+                      <div class="col-sm-8"></div>
+                      </div> <!-- end of nested row-->
+                      <div class="row">
+                       <div class="col-sm-12">
+                         <p>If yes, how should these practices be applied should you be near death?</p>
+                           <input type="text" class="form-control para-answer">
+                         </div><!-- end of col-sm-12 -->
+                         </div><!-- end of nested row -->
+                    </div> <!-- end of section 5-->
 
+                  <!-- 6th section -->
 
+                  <div class="col-sm-12 col-form">
+                    <span class="fa-stack">
+                      <!-- The icon that will wrap the number -->
+                        <span class="fa fa-circle fa-stack-2x"></span>
+                      <!-- a strong element with the custom content, in this case a number -->
+                      <strong class="fa-stack-1x">6</strong>
+                  </span>
+                  <h7 class='orange-heading'>Do you want your medical team or loved ones to attempt to notify your faith or spiritual center?</h7>
+                  <div class="row">
+                      <div class="col-sm-2">
+                     <p><span><input type="checkbox" value=""><span class="checkbox-text"> Yes</p>
+                     </div><!-- end of col-sm-2-->
+                    <div class="col-sm-2">
+                     <p><span><input type="checkbox" value=""><span class="checkbox-text"> No</p>
+                    </div><!-- end of col-sm-2 -->
+                    <div class="col-sm-8"></div>
+                    </div> <!-- end of nested row-->
+                    <div class="row">
+                     <div class="col-sm-12">
+                       <p>If yes, what are the name and numbed of your congregation, synagogue, or worship group?</p>
+                       <form class="form-inline">
+             <div class="form-group">
+                <label for="name">Name</label>
+             <input type="text" class="form-control">
+                <label for="number">Phone</label>
+             <input type="text" class="form-control">
+           </div>
+                       </div><!-- end of col-sm-12 -->
+                       </div><!-- end of nested row -->
+                  </div> <!-- end of section 6-->
 
           </div> <!-- end of nested form-row -->
         </div> <!-- end of col-sm-9-->
