finished page 3, waiting for fonts

--- a/yourvalues.html
+++ b/yourvalues.html
@@ -256,11 +256,11 @@
                 <label for="number">Phone</label>
              <input type="text" class="form-control">
            </div>
-                       </div><!-- end of col-sm-12 -->
+                     </div><!-- end of col-sm-12 -->
                        </div><!-- end of nested row -->
                   </div> <!-- end of section 6-->
-
           </div> <!-- end of nested form-row -->
+          <!-- button row -->
         </div> <!-- end of col-sm-9-->
 
         <!-- -----------------------------------------
@@ -284,8 +284,20 @@
                         </div> <!-- end of 2nd nested row -->
                    </div><!-- end of col-sm-4 -->
                   </div> <!-- end of row -->
-
-                  <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
+                  <div class="row">
+                    <div class="col-sm-4">
+                  <button class="btn btn-default btn-block previous-button">Previous</button>
+                  </div> <!-- end of col-sm-4 -->
+                  <div class="col-sm-8">
+                    <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
+                    </div> <!-- end of -->
+                  </div><!-- end of row -->
+                  <div class="row">
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm-5">
+                      <button class="btn btn-default btn-block pull-right save-button">Previous</button>
+                      </div><!-- end of col-sm-12 -->
+                    </div> <!-- end of row -->
                   </div><!-- end of main container on page -->
 
 
